--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@4.10.38/build/pdf.min.mjs",
-    "pdfjs-dist/build/pdf.worker.min.mjs": "https://aistudiocdn.com/pdfjs-dist@4.10.38/build/pdf.worker.min.mjs"
+    "pdfjs-dist/build/pdf.worker.min.mjs": "https://aistudiocdn.com/pdfjs-dist@4.10.38/build/pdf.worker.min.mjs",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6"
   }
 }
 </script>
