feat: Improve Gemini API key handling and documentation
Introduces a helper function to safely retrieve the API key from environment variables, preventing `ReferenceError` in browser environments. Enhances error messages for missing API keys.

Updates README.md with clear instructions for running examples using Vite and building for production, including how to include the bundled library in HTML. Adjusts vite.config.ts to mock `process.env` for better compatibility. Updates example HTML files to clarify development vs. production script loading and add an error overlay for file-system access issues.

--- a/examples/vanilla-integration.html
+++ b/examples/vanilla-integration.html
@@ -52,11 +52,30 @@
 
     </div>
 
+    <!-- 
+      ========================================
+      OPTION A: DEVELOPMENT MODE (Vite + TS)
+      ========================================
+    -->
     <script type="module">
         import { createSmartDoc } from '../smartDoc.ts';
         window.SmartDoc = { create: createSmartDoc };
         window.dispatchEvent(new Event('library-loaded'));
     </script>
+
+    <!-- 
+      ========================================
+      OPTION B: PRODUCTION / LEGACY MODE
+      ========================================
+      1. Run `npm run build`
+      2. Uncomment lines below
+    -->
+    <!-- 
+    <script src="../distribute/smart-doc.bundle.js"></script>
+    <script>
+        window.dispatchEvent(new Event('library-loaded'));
+    </script> 
+    -->
 
     <script>
         let docInstance = null;
