feat: Allow offline configuration for PDF worker and model viewer
Introduces `pdfWorkerSrc` and `modelViewerSrc` configuration options. This allows users to specify local paths for these assets, enabling offline or self-hosted deployments of the SmartDoc Annotator library. The application now defaults to using a CDN if these paths are not provided.

--- a/examples/legacy-full-demo.html
+++ b/examples/legacy-full-demo.html
@@ -232,6 +232,11 @@
                 // Customization
                 severityOptions: { 1: '#4ade80', 2: '#facc15', 3: '#f87171', 4: '#ef4444' },
                 statusOptions: ['New', 'In Progress', 'Done', 'Rejected'],
+
+                // Offline / Self-Hosted Configuration Examples:
+                // If these are not provided, the library will attempt to fetch them from CDN.
+                // pdfWorkerSrc: './libs/pdf.worker.min.mjs',
+                // modelViewerSrc: './libs/model-viewer.min.js',
                 
                 // Style Overrides (Optional)
                 styleConfig: {
