--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
     "vite": "https://aistudiocdn.com/vite@^7.2.7",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@^5.4.449",
+    "pdfjs-dist": "https://aistudiocdn.com/pdfjs-dist@4.10.38",
     "path": "https://aistudiocdn.com/path@^0.12.7"
   }
 }
