feat: Enhance image and PDF loading with CORS and absolute worker paths
Adds `crossorigin="anonymous"` to CDN script imports for proper cross-origin resource handling.
Updates the PDF worker source logic to explicitly use a stable CDN version and resolve relative paths to absolute URLs. This prevents "about:blank" and relative path resolution errors when running in bundled or blob environments, ensuring reliable PDF loading.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
       NOTE: In an offline environment, you must download these JS files locally
       and reference them here, or rely on the bundler to include them.
       See OFFLINE_SETUP.md for details.
+      
+      We add crossorigin="anonymous" to ensure scripts loaded from CDNs 
+      are treated as same-origin for error reporting and module resolution purposes.
     -->
-    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/docx-preview@0.1.15/dist/docx-preview.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docx-preview@0.1.15/dist/docx-preview.min.js" crossorigin="anonymous"></script>
     
   <script type="importmap">
 {
