--- a/examples/legacy-full-demo.html
+++ b/examples/legacy-full-demo.html
@@ -124,6 +124,11 @@
                     </button>
                 </div>
 
+                <!-- Added Custom ID Button -->
+                <button onclick="loadImagesWithIds()" class="w-full px-3 py-2 bg-gray-700 hover:bg-gray-600 rounded text-xs text-white border border-gray-600">
+                    Load Images with Custom IDs
+                </button>
+
                 <div class="grid grid-cols-2 gap-2">
                     <button onclick="getAnnotations()" class="px-3 py-2 bg-gray-700 hover:bg-gray-600 rounded text-xs text-white border border-gray-600">
                         Log Annotations
@@ -308,6 +313,20 @@
                     'https://images.unsplash.com/photo-1533473359331-0135ef1b58bf?auto=format&fit=crop&w=800&q=80',
                     'https://images.unsplash.com/photo-1494976388531-d1058494cdd8?auto=format&fit=crop&w=800&q=80'
                 ]);
+            }
+        }
+        
+        function loadImagesWithIds() {
+            if (appInstance) {
+                log('Command', 'Loading images with specific IDs (doc-101, doc-102)...');
+                // Pass IDs as the second argument array
+                appInstance.loadDocument(
+                    [
+                        'https://images.unsplash.com/photo-1552519507-da3b142c6e3d?auto=format&fit=crop&w=800&q=80',
+                        'https://images.unsplash.com/photo-1503376763036-066120622c74?auto=format&fit=crop&w=800&q=80'
+                    ], 
+                    ['doc-101', 'doc-102']
+                );
             }
         }
 
